[tool.poetry]
name = "clean_ioc"
version = "0.12.0"
description = "An IOC Container for Python 3.10+"
authors = ["Peter Daly"]
license = "MIT"
homepage = "https://github.com/peter-daly/clean_ioc"
repository = "https://github.com/peter-daly/clean_ioc"
documentation = "https://github.com/peter-daly/clean_ioc"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]
packages = [
    { include = "clean_ioc" },
]
include = ["CHANGES.rst", "clean_ioc/py.typed", "clean_ioc/ext/fastapi/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi= { version = "^0.101.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.1"
black = "^22.3.0"
flakeheaven = "^3.2.1"
isort = "^5.10.1"
mkdocs-material = "^8.5.11"
wily = "^1.24.0"
mkdocstrings-python = "^0.8.3"
expects = "^0.9.0"
assertive = "^0.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {version = "^0.24.0", extras = ["python"]}


[tool.poetry.group.dev]
optional = true


[tool.poetry.extras]
fastapi = ["fastapi"]

[tool.coverage.paths]
source = ["clean_ioc", "*/site-packages"]
tests = ["tests"]

[tool.black]

[tool.isort]
profile = "black"

[tool.flakeheaven]
format = "grouped"
show_source = true
max_complexity = 10


[tool.coverage.run]
branch = true
source = ["clean_ioc", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
